--- a/app1/templates/navbar.html
+++ b/app1/templates/navbar.html
@@ -1,23 +1,33 @@
 
 <div class="box">
-    <div>
-        <form method="post">
+        <form class="form_nav" method="post">
             {% csrf_token %}
-            
+                <a href="/"><img class="img_logo" src="../../media/logo.png" alt=""></a>
+                <div>
                 <input type="text" placeholder="Buscar en MarketPlace">
                 <input type="submit" name="" id="" value="submit">
                 
                 {% if user.is_authenticated %}
                 <a href="{% url 'logout' %}">Logout</a>
+                <a href="{% url 'profile' user.id %}">{{user}}</a>
                 
                 {% else %}
                 <a href="{% url 'login' %}">Login</a>
                 {% endif %}
-                {% if user.is_authenticated %}
-                <a href="">{{user}}</a>
-                {% endif %}
-                
+                </div>   
         </form>
-    </div>
 </div>
+
+
+<style>
+    .img_logo{
+        width: 25px;
+    }
+
+    .form_nav{
+        display: flex;
+        flex-direction: row;
+    }
+
+</style>
 
