--- a/app1/templates/navbar.html
+++ b/app1/templates/navbar.html
@@ -1,11 +1,11 @@
 
 <div class="box">
-        <form class="form_nav" method="post">
+        <form class="form_nav" method="post" action="{% url 'search_product' %}">
             {% csrf_token %}
                 <a href="/"><img class="img_logo" src="../../media/logo.png" alt=""></a>
                 <div>
-                <input type="text" placeholder="Buscar en MarketPlace">
-                <input type="submit" name="" id="" value="submit">
+                <input type="search" name="search_bar" placeholder="Buscar en MarketPlace">
+                <input type="submit" name="search" id="" value="search">
                 
                 {% if user.is_authenticated %}
                 <a href="{% url 'logout' %}">Logout</a>
